@@ -694,7 +694,7 @@ table.requirements input#port { width: 50px; }
 table.requirements select { width: 152px; }
 
 /* filter */
-table.filter { width: 100%; border-collapse: collapse; min-width: 1024px; text-align: center; }
+table.filter { width: 100%; border-collapse: collapse; text-align: center; }
 table.filter tr td {
 	line-height: 20px;
 	height: 26px;
@@ -707,7 +707,7 @@ table.filter tr td.controls { text-align: center; }
 
 .host-list table.filter tr td { width: 25%; }
 
-.item-list table.filter { text-align: left; }
+.item-list table.filter { text-align: left; min-width: 1024px; }
 .item-list table.filter tr td.label { text-align: right; }
 .item-list table.filter tr td.col1 { width: 18%; }
 .item-list table.filter tr td.label.col1 { width: 6%; }
