@@ -11,6 +11,7 @@ A.F....... [ZBX-5074] redesign configuration of action (Eduard)
 ..F....... [ZBXNEXT-829] Zabbix server availability check (Vedmak)
 
 Bug fixes:
+..F....... [ZBX-5179] fixed filter layout on low resolution screens (Pavels)
 ..F....... [ZBX-3853] changed several message strings (Pavels)
 A......... [ZBX-5213] fixed usergroup.massupdate failing when updating only permissions or users (Pavels)
 ..F....... [ZBX-5145] fixed PosgreSQL error when inserting an audit record if the X_FORWARDED_FOR header value is too long (Pavels)
@@ -89,6 +90,7 @@ Changes for 2.0.2rc1
 New features:
 
 Bug fixes:
+..F....... [ZBX-5179] fixed filter layout on low resolution screens (Pavels)
 ..F....... [ZBX-3853] changed several message strings (Pavels)
 A......... [ZBX-5213] fixed usergroup.massupdate failing when updating only permissions or users (Pavels)
 ..F....... [ZBX-5145] fixed PosgreSQL error when inserting an audit record if the X_FORWARDED_FOR header value is too long (Pavels)
